--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-#python==3.6.9
-numpy
-numpy_financial
-scipy
-pandas
-matplotlib
-bokeh
-holoviews
-jupyter
+#python>=3.6.9
+numpy==1.18.1
+numpy-financial==1.0.0
+scipy==1.4.1
+pandas==1.0.1
+matplotlib==3.2.0
+bokeh==1.1.0
+holoviews==1.12.7
+jupyter==1.0.0
